changed buttons to images

--- a/app/src/main/res/layout/conversion_page.xml
+++ b/app/src/main/res/layout/conversion_page.xml
@@ -9,66 +9,63 @@
 
     <Button
         android:id="@+id/sound_btn"
-        android:layout_width="127dp"
-        android:layout_height="61dp"
+        android:layout_width="89dp"
+        android:layout_height="76dp"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
         android:layout_marginBottom="1dp"
-        android:background="@drawable/greenbutton"
-        android:text="Sound"
+        android:background="@drawable/sound"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.052"
+        app:layout_constraintHorizontal_bias="0.046"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.732" />
+        app:layout_constraintVertical_bias="0.727" />
 
     <Button
         android:id="@+id/light_btn"
-        android:layout_width="133dp"
-        android:layout_height="60dp"
+        android:layout_width="110dp"
+        android:layout_height="88dp"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
         android:layout_marginBottom="1dp"
-        android:background="@drawable/greenbutton"
-        android:text="Light"
+        android:background="@drawable/flashlight"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.46"
+        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.862" />
+        app:layout_constraintVertical_bias="0.879" />
 
     <Button
         android:id="@+id/vibrate_btn"
-        android:layout_width="129dp"
-        android:layout_height="63dp"
+        android:layout_width="82dp"
+        android:layout_height="75dp"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
         android:layout_marginBottom="1dp"
-        android:background="@drawable/greenbutton"
-        android:text="Vibration"
+        android:background="@drawable/vibrate"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.885"
+        app:layout_constraintHorizontal_bias="0.861"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.732" />
+        app:layout_constraintVertical_bias="0.733" />
 
     <EditText
         android:id="@+id/input_editText"
@@ -126,14 +123,14 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/index"
-        android:layout_width="39dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="56dp"
+        android:layout_height="55dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -206,18 +203,18 @@
         android:id="@+id/diamond"
         android:layout_width="68dp"
         android:layout_height="105dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:src="@drawable/diamond"
         app:layout_constraintBottom_toBottomOf="@+id/light_btn"
         app:layout_constraintEnd_toEndOf="@+id/vibrate_btn"
-        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="@+id/sound_btn"
         app:layout_constraintTop_toTopOf="@+id/toMorse"
-        app:layout_constraintVertical_bias="0.409" />
+        app:layout_constraintVertical_bias="0.433" />
 
 </android.support.constraint.ConstraintLayout>
