--- a/app/src/main/res/layout/activity_to_text.xml
+++ b/app/src/main/res/layout/activity_to_text.xml
@@ -11,16 +11,15 @@
 
     <Button
         android:id="@+id/sound_btn"
-        android:layout_width="114dp"
-        android:layout_height="49dp"
+        android:layout_width="87dp"
+        android:layout_height="85dp"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
         android:layout_marginBottom="1dp"
-        android:background="@drawable/bluebutton"
-        android:text="Sound"
+        android:background="@drawable/sound"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,16 +30,15 @@
 
     <Button
         android:id="@+id/light_btn"
-        android:layout_width="116dp"
-        android:layout_height="47dp"
+        android:layout_width="93dp"
+        android:layout_height="98dp"
         android:layout_marginStart="1dp"
         android:layout_marginLeft="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
         android:layout_marginBottom="1dp"
-        android:background="@drawable/bluebutton"
-        android:text="Light"
+        android:background="@drawable/flashlight"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +49,7 @@
 
     <ImageView
         android:id="@+id/diamond"
-        android:layout_width="68dp"
+        android:layout_width="80dp"
         android:layout_height="105dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -62,7 +60,7 @@
         android:src="@drawable/diamond"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/light_btn"
-        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="@+id/sound_btn"
         app:layout_constraintTop_toTopOf="@+id/toText"
         app:layout_constraintVertical_bias="0.268" />
